--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CountAPI</title>
-    <script async src="https://api.countapi.xyz/hit/mysite.com/visits?  callback=callbackName"></script>
+    <script async src="https://api.countapi.xyz/hit/anhpworks.github.io/visits?  callback=liveViews"></script>
 </head>
 <body>
     <h1>This page got <span id="visits"></span> views.</h1>
