--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CountAPI</title>
+    <script src="script.js" defer></script>
     <script async src="https://api.countapi.xyz/hit/anhpworks.github.io/visits?  callback=liveViews"></script>
 </head>
 <body>
