--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CountAPI</title>
-    <script src="script.js" defer></script>
-    <script async src="https://api.countapi.xyz/hit/anhpworks.github.io/visits?  callback=liveViews"></script>
+    <title>Playground</title>
+
 </head>
 <body>
-    <h1>This page got <span id="visits"></span> views.</h1>
+
 </body>
 </html>
